manifests/istio-gateway/gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: verdaccio
  namespace: istio-ingress
spec:
  selector:
    istio: gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "npm.xplaceinmyheart.ru"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "npm.xplaceinmyheart.ru"
      tls:
        mode: SIMPLE
        credentialName: xplaceinmyheart-ru-tls
